<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgwood" >

    <TextView
        android:id="@+id/pomocHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/pomoc_head"
        android:textColor="@color/black"
        android:textSize="@dimen/textHead" />

    <TextView
        android:id="@+id/tvPomoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:text="@string/text_pomoc"
        android:textSize="@dimen/textNormal" />

    <Button
        android:id="@+id/bNazaj3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@android:color/transparent"
        android:textColor="@color/button_text"
        android:text="@string/button_nazaj"/>

</RelativeLayout>
